--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
           <nav class="header__pc-nav">
             <ul class="header__items">
               <li class="header__item">
-                <a href="#">
+                <a href="./campaign.html">
                   <div class="header__titles">
                     <p class="header__titles-english">Campaign</p>
                     <p class="header__titles-japanese">キャンペーン</p>
@@ -71,7 +71,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./about-us.html">
                   <div class="header__titles">
                     <p class="header__titles-english">About us</p>
                     <p class="header__titles-japanese">私たちについて</p>
@@ -79,7 +79,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./information.html">
                   <div class="header__titles">
                     <p class="header__titles-english">Information</p>
                     <p class="header__titles-japanese">ダイビング情報</p>
@@ -87,7 +87,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./blog.html">
                   <div class="header__titles">
                     <p class="header__titles-english">Blog</p>
                     <p class="header__titles-japanese">ブログ</p>
@@ -95,7 +95,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./voice.html">
                   <div class="header__titles">
                     <p class="header__titles-english">Voice</p>
                     <p class="header__titles-japanese">お客様の声</p>
@@ -103,7 +103,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./price.html">
                   <div class="header__titles">
                     <p class="header__titles-english">Price</p>
                     <p class="header__titles-japanese">料金一覧</p>
@@ -111,7 +111,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./contact-FAQ.html">
                   <div class="header__titles">
                     <p class="header__titles-english">FAQ</p>
                     <p class="header__titles-japanese">よくある質問</p>
@@ -119,7 +119,7 @@
                 </a>
               </li>
               <li class="header__item">
-                <a href="#">
+                <a href="./contact-form.html">
                   <div class="header__titles">
                     <p class="header__titles-english">Contact</p>
                     <p class="header__titles-japanese">お問い合わせ</p>
@@ -137,47 +137,47 @@
             <nav class="header__site-map site-map">
               <div class="site-map__sp-layout">
                 <div class="site-map__content">
-                  <div class="site-map__main-title site-map__main-title--layout"><a href="#">キャンペーン</a></div>
+                  <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a></div>
                   <div class="site-map__sub-group">
                     <ul class="site-map__sub-titles">
-                      <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
-                      <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
-                      <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
+                      <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                     </ul>
                   </div>
-                  <div class="site-map__main-title"><a href="#">私たちについて</a></div>
+                  <div class="site-map__main-title"><a href="./about-us.html">私たちについて</a></div>
                 </div>
                 <div class="site-map__main">
-                  <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
+                  <div class="site-map__main-title"><a href="./information.html">ダイビング情報</a></div>
                   <div class="site-map__sub-group">
                     <ul class="site-map__sub-titles">
-                      <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                      <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                      <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
+                      <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                     </ul>
                   </div>
-                  <div class="site-map__main-title"><a href="#">ブログ</a></div>
+                  <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
                 </div>
               </div>
               <div class="site-map__sp-layout">
                 <div class="site-map__main">
-                  <div class="site-map__main-title site-map__main-title--layout"><a href="#">お客様の声</a></div>
-                  <div class="site-map__main-title"><a href="#">料金一覧</a></div>
+                  <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
+                  <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
                   <div class="site-map__sub">
                     <ul class="site-map__sub-titles">
-                      <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                      <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                      <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
+                      <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
+                      <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
                     </ul>
                   </div>
                 </div>
                 <ul class="site-map__main">
-                  <li class="site-map__main-title"><a href="#">よくある質問</a></li>
+                  <li class="site-map__main-title"><a href="./contact-FAQ.html">よくある質問</a></li>
                   <li class="site-map__main-title">
-                    <a href="#">プライバシー<wbr />ポリシー</a>
+                    <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
                   </li>
-                  <li class="site-map__main-title"><a href="#">利用規約</a></li>
-                  <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
+                  <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
+                  <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
                 </ul>
               </div>
             </nav>
@@ -299,7 +299,7 @@
             </div>
           </div>
           <div class="topCampaign__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="./campaign.html" class="btn"
               >View more
               <span></span>
             </a>
@@ -327,7 +327,7 @@
             <div class="top-about-us__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               <div class="top-about-us__btn-wrapper">
-                <a href="#" class="btn"
+                <a href="./about-us.html" class="btn"
                   >View more
                   <span></span>
                 </a>
@@ -353,7 +353,7 @@
                 正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
               </p>
               <div class="top-info__btn-wrapper">
-                <a href="#" class="btn"
+                <a href="./information.html" class="btn"
                   >View more
                   <span></span>
                 </a>
@@ -380,7 +380,7 @@
                 <p class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
             </a>
-            <a href="#" class="top-blog__card blog-card">
+            <a href="#" class="blog-cards__item blog-card">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog2.png" alt="こちらに向かって泳ぐウミガメの写真" />
               </figure>
@@ -390,7 +390,7 @@
                 <p class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
             </a>
-            <a href="#" class="top-blog__card blog-card">
+            <a href="#" class="blog-cards__item blog-card">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog3.png" alt="イソギンチャクの中から顔をのぞかせているカクレクマノミ" />
               </figure>
@@ -403,7 +403,7 @@
           </div>
         </div>
         <div class="top-blog__btn-wrapper">
-          <a href="#" class="btn"
+          <a href="./blog.html" class="btn"
             >View more
             <span></span>
           </a>
@@ -455,7 +455,7 @@
             </a>
           </div>
           <div class="top-voice__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="./voice.html" class="btn"
               >View more
               <span></span>
             </a>
@@ -542,7 +542,7 @@
             </div>
           </div>
           <div class="top-price__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="./price.html" class="btn"
               >View more
               <span></span>
             </a>
@@ -574,7 +574,7 @@
               </div>
               <p class="contact__text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__btn-wrapper">
-                <a href="#" class="btn"
+                <a href="./contact-form.html" class="btn"
                   >Contact us
                   <span></span>
                 </a>
@@ -607,47 +607,47 @@
           <nav class="footer__site-map site-map">
             <div class="site-map__sp-layout">
               <div class="site-map__content">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="#">キャンペーン</a></div>
+                <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a></div>
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
-                    <li class="site-map__sub-title"><a href="#">貸切体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ナイトダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
+                    <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                   </ul>
                 </div>
-                <div class="site-map__main-title"><a href="#">私たちについて</a></div>
+                <div class="site-map__main-title"><a href="./about-us.html">私たちについて</a></div>
               </div>
               <div class="site-map__main">
-                <div class="site-map__main-title"><a href="#">ダイビング情報</a></div>
+                <div class="site-map__main-title"><a href="./information.html">ダイビング情報</a></div>
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
+                    <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                   </ul>
                 </div>
-                <div class="site-map__main-title"><a href="#">ブログ</a></div>
+                <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
               </div>
             </div>
             <div class="site-map__sp-layout">
               <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="#">お客様の声</a></div>
-                <div class="site-map__main-title"><a href="#">料金一覧</a></div>
+                <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
+                <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
                 <div class="site-map__sub">
                   <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="#">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
               <ul class="site-map__main">
-                <li class="site-map__main-title"><a href="#">よくある質問</a></li>
+                <li class="site-map__main-title"><a href="./contact-FAQ.html">よくある質問</a></li>
                 <li class="site-map__main-title">
-                  <a href="#">プライバシー<wbr />ポリシー</a>
+                  <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
                 </li>
-                <li class="site-map__main-title"><a href="#">利用規約</a></li>
-                <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
+                <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
               </ul>
             </div>
           </nav>
