--- a/src/voice.html
+++ b/src/voice.html
@@ -37,10 +37,8 @@
     <script src="./assets/js/gsap.js" defer></script>
     <script src="./assets/js/script.js" defer></script>
   </head>
-</html>
-<body>
-    
- <header class="header">
+  <body>
+    <header class="header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
         <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -173,7 +171,116 @@
       </div>
     </header>
     <main>
-      
+      <section class="voice">
+        <div class="voice__inner inner">
+          <div class="voice-cards">
+            <a href="#" class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">20代(女性)</div>
+                    <div class="voice-card__category">ライセンス講習</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                </div>
+                <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice1.png" alt="お客様女性の写真" /></div>
+              </div>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </a>
+            <a href="#" class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(男性)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                </div>
+                <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice2.png" alt="お客様男性の写真" /></div>
+              </div>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p> </a
+            ><a href="#" class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(男性)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                </div>
+                <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice3.png" alt="お客様男性の写真" /></div>
+              </div>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p> </a
+            ><a href="#" class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(男性)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                </div>
+                <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice4.png" alt="お客様男性の写真" /></div>
+              </div>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p> </a
+            ><a href="#" class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(男性)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                </div>
+                <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice5.png" alt="お客様男性の写真" /></div>
+              </div>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p> </a
+            ><a href="#" class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(男性)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
+                </div>
+                <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice6.jpg" alt="お客様男性の写真" /></div>
+              </div>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </a>
+          </div>
+        </div>
+      </section>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
