--- a/src/about-us.html
+++ b/src/about-us.html
@@ -165,8 +165,13 @@
     </header>
     <main>
       <section class="lower-FV">
-        <div class="lower-FV__img lower-FV__img--fish"><h1>Privacy Policy</h1></div>
+        <div class="lower-FV__img lower-FV__img--about"><h1>About us</h1></div>
       </section>
+      <div class="bread">
+        <div class="bread__top">TOP</div>
+        <div class="bread__arrow">></div>
+        <div class="bread__detail">利用規約</div>
+      </div>
       <section class="gallery">
         <div class="gallery__section-titles section-titles">
           <p class="section-titles__english">Gallery</p>
