--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -37,10 +37,8 @@
     <script src="./assets/js/gsap.js" defer></script>
     <script src="./assets/js/script.js" defer></script>
   </head>
-</html>
-<body>
-    
- <header class="header">
+  <body>
+    <header class="header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
         <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -173,7 +171,14 @@
       </div>
     </header>
     <main>
-      
+      <section class="lower-FV">
+        <div class="lower-FV__img lower-FV__img--contact"><h1>Contact</h1></div>
+      </section>
+      <div class="bread">
+        <div class="bread__top">TOP</div>
+        <div class="bread__arrow">></div>
+        <div class="bread__detail">利用規約</div>
+      </div>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
