--- a/src/privacy.html
+++ b/src/privacy.html
@@ -169,6 +169,11 @@
       <section class="lower-FV">
         <div class="lower-FV__img lower-FV__img--fish"><h1>Privacy Policy</h1></div>
       </section>
+      <div class="bread">
+        <div class="bread__top">TOP</div>
+        <div class="bread__arrow">></div>
+        <div class="bread__detail">利用規約</div>
+      </div>
       <section class="privacy">
         <div class="privacy__inner inner">
           <div class="privacy__title-wrapper">
