--- a/src/site-map.html
+++ b/src/site-map.html
@@ -37,9 +37,8 @@
     <script src="./assets/js/gsap.js" defer></script>
     <script src="./assets/js/script.js" defer></script>
   </head>
-</html>
-<body>    
- <header class="header">
+  <body>
+    <header class="header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
         <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -172,6 +171,14 @@
       </div>
     </header>
     <main>
+      <section class="lower-FV">
+        <div class="lower-FV__img lower-FV__img--fish"><h1>Terms of Service</h1></div>
+      </section>
+      <div class="bread">
+        <div class="bread__top">TOP</div>
+        <div class="bread__arrow">></div>
+        <div class="bread__detail">利用規約</div>
+      </div>
       <section class="site-map">
         <div class="site-map__site-map-wrapper">
           <nav class="site-map__site-map site-map">
@@ -221,7 +228,8 @@
               </ul>
             </div>
           </nav>
-        </div></section>
+        </div>
+      </section>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
