--- a/src/voice.html
+++ b/src/voice.html
@@ -171,6 +171,14 @@
       </div>
     </header>
     <main>
+      <section class="lower-FV">
+        <div class="lower-FV__img lower-FV__img--voice"><h1>Voice</h1></div>
+      </section>
+      <div class="bread">
+        <div class="bread__top">TOP</div>
+        <div class="bread__arrow">></div>
+        <div class="bread__detail">利用規約</div>
+      </div>
       <section class="voice">
         <div class="voice__inner inner">
           <div class="voice-cards">
