--- a/src/blog-article.html
+++ b/src/blog-article.html
@@ -37,10 +37,8 @@
     <script src="./assets/js/gsap.js" defer></script>
     <script src="./assets/js/script.js" defer></script>
   </head>
-</html>
-<body>
-    
- <header class="header">
+  <body>
+    <header class="header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
         <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -121,7 +119,7 @@
       <div class="header__sp-nav">
         <div class="header__site-map-wrapper">
           <div class="header__site-map-inner">
-          <nav class="header__site-map site-map">
+            <nav class="header__site-map site-map">
               <div class="site-map__sp-layout">
                 <div class="site-map__content">
                   <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a></div>
@@ -173,7 +171,14 @@
       </div>
     </header>
     <main>
-      
+      <section class="lower-FV">
+        <div class="lower-FV__img lower-FV__img--blog"><h1>Blog</h1></div>
+      </section>
+      <div class="bread">
+        <div class="bread__top">TOP</div>
+        <div class="bread__arrow">></div>
+        <div class="bread__detail">利用規約</div>
+      </div>
       <!--contact-->
       <section class="contact contact-wrapper">
         <div class="contact__inner inner">
