--- a/src/price.html
+++ b/src/price.html
@@ -175,12 +175,108 @@
         <div class="lower-FV__img lower-FV__img--price"><h1>Price</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">料金一覧</div>
+        </div>
       </div>
+      <section class="price">
+        <div class="price__inner inner">
+          <div class="price__menu-wrapper">
+            <div class="price__menu">
+              <div class="price__">
+                <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+                <h2 class="price__title">ライセンス取得</h2>
+              </div>
+              <dl class="price__lists">
+                <div class="price__list">
+                  <dt class="price__name">オープンウォーターダイバーコース</dt>
+                  <dd class="price__yen">¥50,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">アドバンスドオープンウォーターコース</dt>
+                  <dd class="price__yen">¥60,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">レスキュー＋EFRコース</dt>
+                  <dd class="price__yen">¥70,000</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="price__menu">
+              <div class="price__">
+                <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+                <h2 class="price__title">体験ダイビング</h2>
+              </div>
+              <dl class="price__lists">
+                <div class="price__list">
+                  <dt class="price__name">ビーチ体験ダイビング(半日)</dt>
+                  <dd class="price__yen">¥7,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">ビーチ体験ダイビング(1日)</dt>
+                  <dd class="price__yen">¥14,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">ボート体験ダイビング(半日)</dt>
+                  <dd class="price__yen">¥10,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">ボート体験ダイビング(1日)</dt>
+                  <dd class="price__yen">¥18,000</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="price__menu">
+              <div class="price__">
+                <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+                <h2 class="price__title">ファンダイビング</h2>
+              </div>
+              <dl class="price__lists">
+                <div class="price__list">
+                  <dt class="price__name">ビーチダイビング(2ダイブ)</dt>
+                  <dd class="price__yen">¥14,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">ボートダイビング(2ダイブ)</dt>
+                  <dd class="price__yen">¥18,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">スペシャルダイビング(2ダイブ)</dt>
+                  <dd class="price__yen">¥24,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">ナイトダイビング(1ダイブ)</dt>
+                  <dd class="price__yen">¥10,000</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="price__menu">
+              <div class="price__">
+                <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+                <h2 class="price__title">スペシャルダイビング</h2>
+              </div>
+              <dl class="price__lists">
+                <div class="price__list">
+                  <dt class="price__name">貸切ダイビング(2ダイブ)</dt>
+                  <dd class="price__yen">¥24,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">1日ダイビング(3ダイブ)</dt>
+                  <dd class="price__yen">¥32,000</dd>
+                </div>
+                <div class="price__list">
+                  <dt class="price__name">ナイトダイビング(2ダイブ)</dt>
+                  <dd class="price__yen">¥14,000</dd>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--contact-->
-      <section class="contact contact-wrapper">
+      <section class="contact contact-wrapper contact-wrapper--price">
         <div class="contact__inner inner">
           <div class="contact__content-inner">
             <div class="contact__address-wrapper">
