--- a/src/privacy.html
+++ b/src/privacy.html
@@ -170,9 +170,11 @@
         <div class="lower-FV__img lower-FV__img--fish"><h1>Privacy Policy</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">利用規約</div>
+        </div>
       </div>
       <section class="privacy">
         <div class="privacy__inner inner">
@@ -181,7 +183,7 @@
           </div>
           <div class="privacy__text-wrapper">
             <p class="privacy__text">以下は、Webサイトで使用するための一般的なプライバシーポリシーの例です。</p>
-            <ol class="privacy__lists">
+            <ol class=".privacy__lists">
               <li class="privacy__list">概要 当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。</li>
               <li class="privacy__list">収集する情報 当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。</li>
             </ol>
