--- a/src/site-map.html
+++ b/src/site-map.html
@@ -175,16 +175,18 @@
         <div class="lower-FV__img lower-FV__img--fish"><h1>Terms of Service</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">サイトマップ</div>
+        </div>
       </div>
       <section class="site-map">
-        <div class="site-map__site-map-wrapper">
-          <nav class="site-map__site-map site-map">
+        <div class="site-map-wrapper">
+          <nav class="site-map">
             <div class="site-map__sp-layout">
               <div class="site-map__content">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a></div>
+                <div class="site-map__main-title site-map__main-title--layout site-map__main-title--black"><a href="./campaign.html">キャンペーン</a></div>
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
@@ -192,10 +194,10 @@
                     <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                   </ul>
                 </div>
-                <div class="site-map__main-title"><a href="./about-us.html">私たちについて</a></div>
+                <div class="site-map__main-title site-map__main-title--black"><a href="./about-us.html">私たちについて</a></div>
               </div>
               <div class="site-map__main">
-                <div class="site-map__main-title"><a href="./information.html">ダイビング情報</a></div>
+                <div class="site-map__main-title site-map__main-title--black"><a href="./information.html">ダイビング情報</a></div>
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
@@ -203,13 +205,13 @@
                     <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                   </ul>
                 </div>
-                <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
+                <div class="site-map__main-title site-map__main-title--black"><a href="./blog.html">ブログ</a></div>
               </div>
             </div>
             <div class="site-map__sp-layout">
               <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
-                <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
+                <div class="site-map__main-title site-map__main-title--layout site-map__main-title--black"><a href="./voice.html">お客様の声</a></div>
+                <div class="site-map__main-title site-map__main-title--black"><a href="./price.html">料金一覧</a></div>
                 <div class="site-map__sub">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
@@ -219,12 +221,12 @@
                 </div>
               </div>
               <ul class="site-map__main">
-                <li class="site-map__main-title"><a href="./contact-FAQ.html">よくある質問</a></li>
-                <li class="site-map__main-title">
+                <li class="site-map__main-title site-map__main-title--black"><a href="./contact-FAQ.html">よくある質問</a></li>
+                <li class="site-map__main-title site-map__main-title--black">
                   <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
                 </li>
-                <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
-                <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title site-map__main-title--black"><a href="./terms-of-service.html">利用規約</a></li>
+                <li class="site-map__main-title site-map__main-title--black"><a href="./contact-form.html">お問い合わせ</a></li>
               </ul>
             </div>
           </nav>
