--- a/src/terms-of-service.html
+++ b/src/terms-of-service.html
@@ -170,9 +170,11 @@
         <div class="lower-FV__img lower-FV__img--fish"><h1>Terms of Service</h1></div>
       </section>
       <div class="bread">
-        <div class="bread__top">TOP</div>
-        <div class="bread__arrow">></div>
-        <div class="bread__detail">利用規約</div>
+        <div class="bread__inner inner">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow">></div>
+          <div class="bread__detail">利用規約</div>
+        </div>
       </div>
       <!--terms-->
       <section class="terms">
@@ -195,7 +197,7 @@
               <li class="terms__list">その他の規定 本規約は、日本法に準拠して解釈されるものとし、当社とお客様は、本規約に関する紛争が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とすることに同意します。</li>
               <li class="terms__list">利用規約の変更 当社は、必要に応じて本利用規約を変更することがあります。変更後の利用規約は、当社のサイトに掲載された時点から効力を有するものとします。変更があった場合、当社は適切な手段でお知らせします。</li>
             </ol>
-            <p class="terms__text">以上が、当社の利用規約の概要です。お客様のサービス利用にあたっては、本規約をお読みいただき、同意いただける場合のみサービスをご利用ください。</p>
+            <p class="terms__text terms__text--last">以上が、当社の利用規約の概要です。お客様のサービス利用にあたっては、本規約をお読みいただき、同意いただける場合のみサービスをご利用ください。</p>
           </div>
         </div>
       </section>
