--- a/src/voice.html
+++ b/src/voice.html
@@ -287,6 +287,20 @@
               </p>
             </a>
           </div>
+          <div class="voice__pager-wrapper">
+            <div class="voice__pager pager">
+              <a href="#" class="pager__before"><img src="./assets/images/common/pager-before.png" alt="前のページへ" /></a>
+              <div class="pager__number-wrapper">
+                <a href="#" class="pager__number">1</a>
+                <a href="#" class="pager__number">2</a>
+                <a href="#" class="pager__number">3</a>
+                <a href="#" class="pager__number">4</a>
+                <a href="#" class="pager__number">5</a>
+                <a href="#" class="pager__number">6</a>
+              </div>
+              <a href="#" class="pager__after"><img src="./assets/images/common/pager-after.png" alt="次のページへ" /></a>
+            </div>
+          </div>
         </div>
       </section>
       <!--contact-->
