--- a/src/404.html
+++ b/src/404.html
@@ -37,10 +37,8 @@
     <script src="./assets/js/gsap.js" defer></script>
     <script src="./assets/js/script.js" defer></script>
   </head>
-</html>
-<body>
-    
- <header class="header">
+  <body class="no-page">
+    <header class="no-page__header header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
         <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -121,7 +119,7 @@
       <div class="header__sp-nav">
         <div class="header__site-map-wrapper">
           <div class="header__site-map-inner">
-          <nav class="header__site-map site-map">
+            <nav class="header__site-map site-map">
               <div class="site-map__sp-layout">
                 <div class="site-map__content">
                   <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a></div>
@@ -173,39 +171,24 @@
       </div>
     </header>
     <main>
-      
-      <!--contact-->
-      <section class="contact contact-wrapper">
-        <div class="contact__inner inner">
-          <div class="contact__content-inner">
-            <div class="contact__address-wrapper">
-              <div class="contact__info-wrapper">
-                <div class="contact__logo logo"><img src="./assets/images/common/contact-logo.png" alt="コードアップスのロゴ" /></div>
-              </div>
-              <div class="contact__info">
-                <div class="contact__address">
-                  <p>沖縄県那覇市1-1</p>
-                  <a href="tel:0120-000-0000" class="contact__tel">TEL:0120-000-0000</a>
-                  <p>営業時間:8:30-19:00</p>
-                  <p>定休日:毎週火曜日</p>
-                </div>
-                <div class="contact__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6888.6383644040225!2d127.68185319225111!3d26.211610509147523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1713793644657!5m2!1sja!2sjp" width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-              </div>
-            </div>
-            <div class="contact__content">
-              <div class="contact__titles">
-                <p class="contact__titles-english">Contact</p>
-                <h2 class="contact__titles-japanese">お問い合わせ</h2>
-              </div>
-              <p class="contact__text">ご予約・お問い合わせはコチラ</p>
-              <div class="contact__btn-wrapper">
-                <a href="./contact-form.html" class="btn"
-                  >Contact us
-                  <span></span>
-                </a>
-              </div>
-            </div>
+      <section class="no-page__main">
+        <div class="no-page__bread bread">
+          <div class="bread__inner inner">
+            <a href="index.html" class="bread__top">TOP</a>
+            <div class="bread__arrow">></div>
+            <div class="bread__detail">404</div>
           </div>
+        </div>
+        <h1>404</h1>
+        <div class="no-page__texts">
+          <p>申し訳ありません。</p>
+          <p>お探しのページが見つかりません。</p>
+        </div>
+        <div class="no-page__btn-wrapper">
+          <a href="./index.html" class="btn btn--white"
+            >Page Top
+            <span></span>
+          </a>
         </div>
       </section>
     </main>
