--- a/src/index.html
+++ b/src/index.html
@@ -648,6 +648,8 @@
                 </li>
                 <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
                 <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
+                <li class="site-map__main-title"><a href="./404.html">404</a></li>
               </ul>
             </div>
           </nav>
